tests/compile-fail/integration_suite__integration__general__local_string.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `x`
   ┌─ <input>:28:16
   │
28 │         string x = "hi";
   │                ^ unexpected token
   │
   = 
     Expected one of "!=", "%", "%=", "&", "&&", "&=", "(", ")", "*", "*=", "+", "+=", ",", "-", "-=", "/", "/=", ":", ";", "<", "<=", "=", "==", ">", ">=", "?", "@", "[", "]", "^", "^=", "{", "|", "|=", "||" or "}"


